2020-11-18  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r269940.
        https://bugs.webkit.org/show_bug.cgi?id=219076

        caused seemingly-infinite build time regression

        Reverted changeset:

        "[JSC] Implement WebAssembly.Memory with shared"
        https://bugs.webkit.org/show_bug.cgi?id=218693
        https://trac.webkit.org/changeset/269940

2020-11-16  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Implement WebAssembly.Memory with shared
        https://bugs.webkit.org/show_bug.cgi?id=218693

        Reviewed by Saam Barati.

        * wasm/function-tests/trap-load-shared.js: Added.
        (wasmFrameCountFromError):
        * wasm/function-tests/trap-store-shared.js: Added.
        * wasm/js-api/test_memory.js:
        (binaryShouldNotParse):
        * wasm/stress/shared-memory-errors.js: Added.
        (assert.throws):
        * wasm/stress/shared-wasm-memory-buffer.js: Added.

2020-11-17  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Enable static public class fields
        https://bugs.webkit.org/show_bug.cgi?id=219058

        Reviewed by Saam Barati.

        * stress/big-int-as-property-name.js:
        * stress/class-fields-bytecode-cache.js:
        * stress/class-fields-computed-to-property-key.js:
        * stress/class-fields-function-name.js:
        * stress/class-fields-harmony.js:
        * stress/class-fields-private-use-eval.js:
        * stress/class-fields-proxy-define-property.js:
        * stress/class-fields-stress-instance.js:
        * stress/class-fields-to-property-key-const-string-ftl.js:
        * stress/class-fields-to-property-key-const-symbol-ftl.js:
        * stress/class-fields-to-property-key-slow-object-tostring-ftl.js:
        * stress/class-fields-to-property-key-slow-object-valueof-ftl.js:
        * stress/class-fields-to-property-key-string-object-ftl.js:
        * stress/class-fields-to-property-key-string-or-string-object-ftl.js: