@@ -1,3 +1,12 @@
+2020-11-18  Xan Lopez  <xan@igalia.com>
+
+        [JSC] Import V8 private instance fields tests
+        https://bugs.webkit.org/show_bug.cgi?id=219075
+
+        Reviewed by Yusuke Suzuki.
+
+        * stress/class-fields-private-harmony.js: Added.
+
 2020-11-18  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r269940.
